<resources>
    <string name="app_name">Quedemos!</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hola desde la sección: %1$d</string>
    <string name="facebook_app_id">1738672446402477</string>
    <string name="lanzar_notification">Lanzar notificación</string>
    <string name="recibir_notifacaciones">Recibir notificaciones</string>
    <string name="enviar_token">Enviar Token</string>
    <string name="animal_emisor">Soy un perro, da un toque al gato</string>

    <string name="customize">Personalizar</string>
    <string name="show_dialog">Mostrar diálogo</string>
    <string name="undo">Deshacer</string>

    <string name="label_google_sign_in">Gmail</string>
    <string name="desc_google_sign_in">Inicia sesión con tu cuenta de google</string>

    <string name="label_facebook_login">Facebook</string>
    <string name="desc_facebook_login">Inicia sesión con tu cuenta de Facebook</string>

    <string name="label_emailpassword">Email/Password Authentication</string>
    <string name="desc_emailpassword">Use an email and password to authenticate with Firebase.</string>

    <string name="label_anonymous_auth">Anonymous Authentication</string>
    <string name="desc_anonymous_auth">Sign in anonymously and then later upgrade to a full Firebase Auth user..</string>

    <string name="label_custom_auth">Custom Authentication</string>
    <string name="desc_custom_auth">Use a custom token signed by your own server to authenticate with Firebase.</string>

    <string name="label_twitter">Twitter Authentication</string>
    <string name="desc_twitter">Use a twitter account to authenticate with Firebase.</string>

    <string name="hint_user_id">User ID</string>
    <string name="get_custom_token">Get Token</string>
    <string name="sign_in">Sign In</string>
    <string name="create_account">Create Account</string>
    <string name="sign_out">Sign Out</string>
    <string name="disconnect">Disconnect</string>
    <string name="loading">Loading…</string>
    <string name="custom_token">Custom Token</string>
    <string name="signed_out">Signed Out</string>
    <string name="token_null">Token: null</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="desc_firebase_lockup">Firebase logo and name</string>

    <string name="firebase_status_fmt">Firebase User: %s</string>
    <string name="firebase_user_management">Firebase User Management</string>

    <string name="google_status_fmt">Google User: %s</string>
    <string name="google_title_text">Google Sign In</string>

    <string name="facebook_status_fmt">Facebook User: %s</string>
    <string name="facebook_title_text">Facebook Login</string>

    <string name="emailpassword_status_fmt">Email User: %s</string>
    <string name="emailpassword_title_text">Email and Password</string>

    <string name="id_fmt">User ID: %s</string>
    <string name="email_fmt">Email: %s</string>

    <string name="apariencia">Apariencia</string>
    <string name="permisos">Permisos</string>
    <string name="faq">FAQ</string>
    <string name="contacto">Contacto</string>
    <string name="amigos">Amigos</string>
    <string name="logout_menu">Log out</string>
    <string name="a_adir_nuevo_amigo">Añadir nuevo amigo</string>
    <string name="mi_cuenta">Mi cuenta</string>
    <string name="acerca_de">Acerca de</string>
    <string name="info_quedemos">Para todos aquellos “a ver si quedamos un día” que caen en sacos
rotos. Una aplicación para compatibilizar agendas de forma sencilla y eficaz: basta
con que cada uno indique su disponibilidad y se determinará qué día es el que más amigos
pueden acudir. ¡Quedemos!</string>
    <string name="permisos_cuentas">Buscar cuentas en el dispositivo</string>
    <string name="permisos_datos">Enviar y recibir datos</string>
    <string name="permisos_suspension">Impedir que el teléfono entre en modo de suspensión</string>
    <string name="email_contact">Mandar correo electrónico</string>
    <string name="contacto_facebook">Página de Facebook</string>
    <string name="contacto_twitter">Página de Twitter</string>
    <string name="copyright">© 2016 Marta Millán Calvo</string>
    <string name="nombre">Nombre</string>
    <string name="lbl_compat">Intervalo de compatibilidad:</string>
    <string name="fecha_inicio">Fecha inicio: </string>
    <string name="fecha_fin">Fecha fin:</string>
    <string name="finde_solo">Solo fin de semana</string>
    <string name="lbl_horario">Horario de quedada:</string>
    <string name="desayuno">Desayuno (09:00&#8211;11:00)</string>
    <string name="almuerzo">Almuerzo (11:00&#8211;13:00)</string>
    <string name="comida">Comida (13:00&#8211;16:00)</string>
    <string name="caf_merienda">Café-merienda (16:00&#8211;18:00)</string>
    <string name="copas">Copas (18:00&#8211;20:00)</string>
    <string name="cena">Cena (20:00&#8211;24:00)</string>
    <string name="add_friend">Añade a uno de tus amigos</string>
    <string name="ver_paticipantes">Ver paticipantes</string>

</resources>
